--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: webdriver
 version: 0.10.0-pre.14
-author: Marc Fisher II <fisherii@google.com>
+author: Marc Fisher II <fisherii@google.com>, Brandon White <jennexproject+webdriver@gmail.com>
 description: >
   Provides WebDriver bindings for Dart. These use the WebDriver JSON interface,
   and as such, require the use of the WebDriver remote server.
